samples/_failures_safe/1761447634_36cb5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c41adb2.c: In function ‘main’:
./samples/SAFE/__tmp_1c41adb2.c:171:12: error: missing terminating " character
  171 |     printf("\nTokens found:\n
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1c41adb2.c:171:5: error: expected expression at end of input
  171 |     printf("\nTokens found:\n
      |     ^~~~~~
./samples/SAFE/__tmp_1c41adb2.c:171:5: error: expected declaration or statement at end of input
